/ 现在支持日夜切换的宠物皮肤